Fix broken layout for questionaire

--- a/client/src/app/assessments/assessments.scss
+++ b/client/src/app/assessments/assessments.scss
@@ -54,6 +54,11 @@
     font-weight: 300;
     font-size: 28px;
   }
+
+  .form-input-wrap.radio-wrap {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .cp-assessment-results {
